@@ -1,5 +1,11 @@
 2008-11-03  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-dialogs.c
+		- (create_info_label, create_info_label_security, info_dialog_add_page):
+			Make info items selectable (bgo #558975)
+
+2008-11-03  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/page-ppp.c
 		- (use_mppe_toggled_cb, populate_ui): ensure changes get saved
 			(bgo #559077)
